# nenkin-garden

./: .gitignore  CLAUDE.md  Cargo.toml  ITERATION_LOG.md  KNOWN_ISSUES.md  README.md  design-memo-core-000.md  loop-engineering-rules-v0.md  loop-rules-core.md
.claude/: launch.json  protected-paths.txt  settings.json  settings.local.json
.claude/agents/: nenkin-escalation.md  nenkin-implementer.md  nenkin-orchestrator.md  nenkin-recorder.md  nenkin-runner.md  nenkin-test-author.md
.claude/scripts/: guard-owned-files.ps1
docs/: index.html
docs/demo/: index.html  render_wasm.d.ts  render_wasm.js  render_wasm_bg.wasm  render_wasm_bg.wasm.d.ts
docs/demo-net/: index.html  render_wasm.d.ts  render_wasm.js  render_wasm_bg.wasm  render_wasm_bg.wasm.d.ts
docs/demo-tree/: index.html  render_wasm.d.ts  render_wasm.js  render_wasm_bg.wasm  render_wasm_bg.wasm.d.ts
render-wasm/: Cargo.toml
render-wasm/src/: lib.rs
src/: graph_svg.rs  hash.rs  headless.rs  lib.rs  metrics.rs  params.rs  rng.rs  state.rs  step.rs  world.rs
src/analysis/: flow.rs  graph.rs  mod.rs  skeleton.rs
src/netphys/: hash.rs  kirchhoff.rs  mod.rs  state.rs  step.rs
src/tree/: hash.rs  mod.rs  state.rs  step.rs
tasks/: design-memo-core-000.md  design-memo-netphys-000.md  design-memo-tree-growth-000.md  task-analysis-001.md  task-analysis-002.md  task-analysis-003.md  task-calib-001.md  task-core-001.md  task-core-002.md  task-core-003.md  task-core-004.md  task-metric-thresholds-001.md  task-netphys-001.md  task-netphys-002.md  task-netphys-003.md  task-netphys-004.md  task-netphys-005.md  task-netphys-006.md  task-render-001.md  task-render-002.md  task-render-003.md  task-render-004.md  task-render-005.md  task-render-006.md  task-render-007.md  task-render-008.md  task-render-net-001.md  task-render-net-002.md  task-render-net-003.md  task-render-net-004.md  task-render-tree-001.md  task-render-tree-002.md  task-test-harness-001.md  task-tree-growth-001.md  task-tree-growth-002.md
tests/: CLAUDE.md  analysis_001.rs  analysis_002.rs  analysis_003.rs  core_000.rs  core_001.rs  core_002.rs  core_003.rs  core_004.rs  metric_thresholds_001.rs  netphys_001.rs  netphys_002.rs  netphys_003.rs  netphys_004.rs  netphys_005.rs  netphys_006.rs  render_002.rs  test_harness_001.rs  tree_growth_001.rs  tree_growth_002.rs
